syntax = "proto3";
// protoc --go_out=plugins=grpc:. *.proto

package auth;

service Auth {
    rpc CreateSession(Session) returns (SessionID) {}
    rpc CheckSession(SessionID) returns (Session) {}
    rpc DeleteSession(SessionID) returns (Error) {}
}

message Error {
    bool error = 1;
}

message SessionID {
    string id = 1;
}

message Session {
    string login = 1;
    string useragent = 2;
}
